# Colosus

./: .env.example  .gitignore  .gitmodules  ARCHITECTURE.md  CONTRIBUTING.md  Caddyfile  IDENTITY.md  INFRA.md  PORTS.md  README.md  SOUL.md  deploy.sh  docker-compose.prod.yml  docker-compose.yml  start.sh  stop.sh
.openclaw/: workspace-state.json
android/: README.md  settings.gradle.kts
autobot/: .env.example  .gitignore  AGENTS.md  AI_CAPABILITIES_GUIDE.md  API_DOCUMENTATION.md  ARCHITECTURE.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  KNOWN_ISSUES.md  README.md  WHATSAPP_INTEGRATION_GUIDE.md  backup.sh  docker-compose.prod.yml  docker-compose.yml  hermes-wrapper.sh  openclaw-wrapper.sh  package-lock.json  package.json  restore.sh  run-tests.sh  schema-customer-memories.sql  schema-rl.sql  schema-rls.sql  schema-subscriptions.sql  schema-warehouse.sql  schema-yayapay.sql  schema-z-rls.sql  schema.sql  seed-plans.sql  seed-yaya-expocomer.sql  start.sh  stop.sh  tsconfig.json  vitest.config.ts
compose/: agent.yml  ai.yml  analytics.yml  automation-lean.yml  automation.yml  chat.yml  erp-lean.yml  erp.yml  foundation-lean.yml  foundation.yml  helpdesk.yml  identity.yml  mail.yml  management.yml  meetings.yml  nextcloud-lean.yml  nextcloud.yml  proxy.yml  rag.yml  wordpress.yml
dashboard/: README.md  ecosystem.config.cjs  next.config.ts  package-lock.json  package.json  (+1 more)
mcp-servers/crm-mcp/: package.json  pyproject.toml
mcp-servers/crm-mcp/src/: index.ts
mcp-servers/crm-mcp/src/crm_mcp/: __init__.py  server.py
mcp-servers/yape-mcp/: pyproject.toml  server.py
(+1027 files in other folders)
