[project]
name = "crm-mcp"
version = "1.0.0"
description = "CRM MCP Server for Yaya Platform — contact management, interactions, segmentation"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp[cli]>=1.25.0",
    "psycopg[binary]>=3.3.2",
    "psycopg-pool>=3.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
crm-mcp = "crm_mcp:main"

[tool.pytest.ini_options]
pythonpath = ["./src"]
asyncio_default_fixture_loop_scope = "function"

[tool.ruff]
line-length = 150
target-version = "py312"
exclude = [".venv*"]

lint.select = ["E", "F", "I", "B", "W", "UP", "RUF"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
