[project]
name = "yape-mcp"
version = "1.0.0"
description = "Yape Payment MCP Server — check, list, and confirm Yape payments via AI agent"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp[cli]>=1.25.0",
    "httpx>=0.28.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
yape-mcp = "server:main"

[tool.ruff]
line-length = 150
target-version = "py312"
exclude = [".venv*"]

lint.select = ["E", "F", "I", "B", "W", "UP", "RUF"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
